fix: resolve OPA syntax and OIDC configuration issues
- Update OPA Rego policy syntax with 'if' keyword for v0.x compatibility
- Fix authorization server path to use /oauth2/default
- Remove protocol prefix from OKTA_ISSUER_HOST
- Add SessionMiddleware to BFF for OAuth state management
- Remove obsolete docker-compose version field
- Enhance .env.example documentation

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,59 @@
-# Okta
+# Copy this file to .env and fill in your actual Okta values
+#
+# Quick setup:
+#   1. Replace YOUR_OKTA_DOMAIN with your actual Okta domain (e.g., dev-12345678.okta.com)
+#   2. Replace YOUR_CLIENT_ID with your OIDC app's client ID
+#   3. Replace YOUR_CLIENT_SECRET with your OIDC app's client secret
+#   4. Generate a new SESSION_SECRET using: python3 -c "import secrets; print(secrets.token_urlsafe(32))"
+
+# ============================================================================
+# Okta Configuration
+# ============================================================================
+# Format: https://YOUR_DOMAIN/oauth2/AUTHZ_SERVER_ID
 OKTA_ISSUER=https://YOUR_OKTA_DOMAIN/oauth2/poc
-OKTA_CLIENT_ID=XXXX
-OKTA_CLIENT_SECRET=YYYY
+
+# From your OIDC Application settings
+OKTA_CLIENT_ID=YOUR_CLIENT_ID
+OKTA_CLIENT_SECRET=YOUR_CLIENT_SECRET
+
+# Must match the redirect URI configured in your Okta app
 OIDC_REDIRECT_URI=http://localhost:8080/auth/callback
 
-# Tokens/audience
+# ============================================================================
+# Token Configuration
+# ============================================================================
+# Must match the audience configured in your Okta authorization server
 ACME_AUDIENCE=api://acme-api
+
+# Space-separated scopes to request
 ACME_SCOPES=acme.read
 
-# BFF session
-SESSION_SECRET=dev_not_secure
+# ============================================================================
+# BFF Session Configuration
+# ============================================================================
+# IMPORTANT: Generate a secure random string for production!
+# Run: python3 -c "import secrets; print(secrets.token_urlsafe(32))"
+SESSION_SECRET=CHANGE_ME_TO_SECURE_RANDOM_STRING
+
+# Name of the session cookie
 SESSION_COOKIE_NAME=poc_session
 
-# Envoy/OPA
-ENVOY_JWKS_URI=${OKTA_ISSUER}/v1/keys
+# ============================================================================
+# Infrastructure Configuration
+# ============================================================================
+# JWKS endpoint for Envoy to validate JWTs
+# Format: https://YOUR_DOMAIN/oauth2/AUTHZ_SERVER_ID/v1/keys
+ENVOY_JWKS_URI=https://YOUR_OKTA_DOMAIN/oauth2/poc/v1/keys
+
+# Just the hostname (no protocol) for Envoy TLS cluster
+# Example: dev-12345678.okta.com
 OKTA_ISSUER_HOST=YOUR_OKTA_DOMAIN
+
+# OPA endpoint for authorization decisions
 OPA_URL=http://authz:8181/v1/data/policy/allow
+
+# ============================================================================
+# Optional: Redis Configuration
+# ============================================================================
+# If you want to use external Redis instead of Docker Compose Redis
+# REDIS_URL=redis://localhost:6379/0
